testsuite/tests/backpack/should_fail/bkpfail18.bkp
unit p where
    signature ShouldFail where
        instance Show Int
        instance Show Int
